--- a/explore/EDA.ipynb
+++ b/explore/EDA.ipynb
@@ -5123,11 +5123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dump(mlb, open('./mlb_rolledup.pkl', 'wb'))"
+    "dump(mlb, open('./../mlb_rolledup.pkl', 'wb'))"
    ]
   },
   {
@@ -5141,32 +5141,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pickle import load\n",
-    "mlb2 = load(open('./mlb_rolledup.pkl', 'rb'))"
+    "mlb2 = load(open('./../mlb_rolledup.pkl', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mlb2.transform(np.array(['941','V88']))"
+    "mlb2.transform(np.array([\"941\",\"V88\"]))"
    ]
   },
   {
